[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sixelcrop"
description = 'A library for cropping sixel images'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Josiah Outram Halstead", email = "josiah@halstead.email" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/joouha/sixelcrop#readme"
Issues = "https://github.com/joouha/sixelcrop/issues"
Source = "https://github.com/joouha/sixelcrop"

[project.scripts]
sixelcrop = "sixelcrop:cli"

[tool.hatch.version]
path = "sixelcrop/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  ".*_cache",
  "/.git",
  "/docs",
]

[tool.hatch.envs.dev]
dependencies = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "ssort",
  "flake8",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=sixelcrop --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
